tests/snapshots/codegen__.__tests__files__compound_literal.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "(int){1} => 1\n((int[]){0, 1, 2})[2] => 2\n((struct { char a; int b; }){'a', 3}).a => 97\n({ int x = 3; (int){x}; }) => 3\n*p => 5\nOK\n"
status: 0
