tests/snapshots/codegen__.__tests__files__stdlib_string.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "strlen(\"Hello\") = 5\nstrcpy result: World\nstrcmp(\"Hello\", \"Hello\") = 0\nstrcmp(\"Hello\", \"World\") = -15\nstrcat result: Hello World\nAll string tests passed!\n"
status: 0
